--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@ body{
 }
 /*Header*/
 header{
+    width: 100%;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     height: 6em;
@@ -32,6 +34,7 @@ i{
 /*Aside*/
 .aside{
     position: fixed;
+    margin-top:6em;
     width: 5em;
     background-color: #bf0010;
     height: -webkit-fill-available;
@@ -40,16 +43,48 @@ i{
     margin:1em 0 0 0;
 }
 .aside p{
-    margin:.5em;
+    font-size:.7em;
+    margin: .5em 0 0 0;
 }
 .aside article{
     border-radius: 0 2em 0 0;
     color:white;
-    border:1px solid green;
     background:#e60012;
     text-align: center;
     transition:.1s background-color;
+    padding: .3em;
+    border-top:.1px solid #bf0010;
 }
 .aside article:hover{
     background-color: #bf0010;
 }
+/*.MAIN*/
+.main{
+    padding:6em 0 0 5em;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 60%;
+}
+.main figure{
+    margin:.2em;
+}
+.main figure img{
+    border-radius: 10px;
+    align-self: stretch;
+    justify-self: stretch;
+    object-fit: cover;
+    border:1px solid goldenrod;
+    max-width:100%;
+}
+
+/*Classes GRID*/
+.paysage{
+    grid-column: span 2;
+}
+.portrait{
+    grid-row: span 2;
+}
+.full{
+    grid-column: span 3;
+}
+/**/
