--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body{
     margin:0;
     font-family:sans-serif;
+    background-color: #f4f4f4;
 }
 /*Header*/
 header{
@@ -8,15 +9,16 @@ header{
     position: fixed;
     display: flex;
     justify-content: space-between;
-    height: 6em;
+    height: 4em;
     background-color: #e60012;
 }
 svg{
-    margin:2em 1em;
+    margin: 1.3em .6em;
     fill:white;
 }
 nav ul{
     margin:1.5em;
+    font-size: 0.7em;
     display: flex;
 }
 nav li{
@@ -34,7 +36,7 @@ i{
 /*Aside*/
 .aside{
     position: fixed;
-    margin-top:6em;
+    margin-top:4em;
     width: 5em;
     background-color: #bf0010;
     height: -webkit-fill-available;
@@ -60,12 +62,13 @@ i{
 }
 /*.MAIN*/
 .main{
-    padding:6em 0 0 5em;
+    padding:4em 0 0 5em;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     width: 60%;
 }
 .main figure{
+    grid-column: span 2;
     margin:.2em;
 }
 .main figure img{
@@ -73,18 +76,85 @@ i{
     align-self: stretch;
     justify-self: stretch;
     object-fit: cover;
-    border:1px solid goldenrod;
     max-width:100%;
 }
 
 /*Classes GRID*/
-.paysage{
-    grid-column: span 2;
+.main figure.paysage{
+    grid-column: span 4;
 }
-.portrait{
+.main figure.portrait{
     grid-row: span 2;
 }
-.full{
+.main figure.half{
     grid-column: span 3;
 }
-/**/
+.main figure.full{
+    grid-column: span 6;
+}
+/*News*/
+.news{
+    position: absolute;
+    top:4em;
+    right: 1em;
+}
+.news article{
+    background: #fff;
+}
+/*Footer*/
+footer{
+    border-radius:10px 10px 0 0;
+    margin: 0 5.2em;
+    width: 60%;
+    color:white;
+}
+footer .top,footer .bottom{
+    display: flex;
+    flex-wrap: wrap;
+}
+footer .top{
+    background-color: #e60012; 
+    border-radius:10px 10px 0 0;
+}
+footer .top p{
+    padding:1.5em;
+    border-radius: 10px;
+    background-color: #bf0010;
+}
+footer .bottom{
+    background-color: #bf0010;
+}
+footer .bottom p{
+    margin:.5em 2em;
+}
+footer .social{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: .7em;
+    background-color: #333;
+}
+footer .social p{
+    margin:.5em 2em;
+    font-size:2em;
+}
+/*Socials*/
+.fa-facebook-f,.fa-twitter{
+    margin: .2em;
+    color:white;
+}
+.facebook,.twitter{
+    display: flex;
+    width:20%;
+    border-radius:10px;
+    margin: 1em .2em;
+}
+.social .facebook p,.social .twitter p{
+    font-size: .9em;
+    margin: auto;
+}
+.facebook{
+    background-color: #3b5998;
+}
+.twitter{
+    background-color:#00acee;
+}
