--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@ svg{
     margin: 1.3em .6em;
     fill:white;
 }
+ul svg{
+    margin:0;
+}
 nav ul{
     margin:1.5em;
     font-size: 0.7em;
@@ -50,27 +53,49 @@ i{
 }
 .aside p{
     font-size:.7em;
-    margin: .5em 0 0 0;
+    margin: .5em 0;
 }
 .aside article{
-    border-radius: 0 2em 0 0;
     color:white;
     background:#e60012;
     text-align: center;
     transition:.1s background-color;
     padding: .3em;
     border-top:.1px solid #bf0010;
+    position: relative;
 }
 .aside article:hover{
     background-color: #bf0010;
 }
+.aside .arrow{
+    position: fixed;
+    bottom: 0;
+    left: 3.5em;
+    background: white;
+    border-radius: 5px 5px 0 0;
+    color: #bf0010;
+    font-size: .5em;
+    height: 3em;
+    width: 3em;
+}
+.arrow i{
+    margin: .5em 0;
+}
+.corner:after{
+    content: '';
+    position: absolute;
+    border-top: 10px solid #6f0009;
+    border-left: 10px solid rgba(255, 255, 255, 0);
+    top: 0;
+    right: 0;
+}
 /*LeftNav*/
 .aside ul{
-    position: absolute;
+    position: fixed;
     display: none;
-    z-index:2;
-    left:5em;
-    top:0;
+    z-index: 44;
+    left: 5em;
+    top: 4em;
     color:black;
     margin:0;
     padding:1em;
@@ -91,7 +116,6 @@ i{
 .main{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    width: 60%;
     padding-left: 5em;
     grid-auto-rows: max-content;
 }
@@ -106,11 +130,12 @@ i{
     opacity:1;
 }
 .main figure:after{
-    border-radius: 10px;
+    border-radius:0 0 5px 5px ;
     bottom: 0;
     box-shadow: 0 12px 12px rgb(0 0 0 / 30%);
+    justify-content: center;
     content: "";
-    height: 100%;
+    height: 10%;
     left: 0;
     opacity: 0;
     position: absolute;
@@ -123,7 +148,7 @@ i{
 }
 */
 .main figure img{
-    border-radius: 10px;
+    border-radius: 5px;
     align-self: stretch;
     justify-self: stretch;
     max-width:100%;
@@ -146,9 +171,9 @@ i{
 }
 /*News*/
 .news{
-    width: 30%;
+    width: 100%;
     right: 0;
-    margin: 1em;
+    margin: .2em;
 }
 .news article div{
     width:60%;
@@ -156,6 +181,8 @@ i{
 .news article h3{
     margin: .5em 0;
     font-size:1em;
+    border-left: 4px solid #f4f4f4;
+    padding: 0em 5px;
 }
 .news article p{
     margin:0;
@@ -176,18 +203,19 @@ i{
     margin: .5em 0;
 }
 .news img{
-    margin:1em;
+    margin:.5em;
     width: 25%;
-    border-radius: 10px;
+    border-radius: 5px;
     float: left;
     height: -webkit-fill-available;
 }
-.cat{
+article.cat{
     padding: 1em;
+    margin: 0;
 }
 /*Footer*/
 footer{
-    border-radius:10px 10px 0 0;
+    border-radius:5px 5px 0 0;
     margin: 0 5.2em;
     width: 60%;
     color:white;
@@ -198,11 +226,11 @@ footer .top,footer .bottom{
 }
 footer .top{
     background-color: #e60012; 
-    border-radius:10px 10px 0 0;
+    border-radius:5px 5px 0 0;
 }
 footer .top p{
     padding:1.5em;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #bf0010;
 }
 footer .bottom{
@@ -229,7 +257,7 @@ footer .social p{
 .facebook,.twitter{
     display: flex;
     width:20%;
-    border-radius:10px;
+    border-radius:5px;
     margin: 1em .2em;
 }
 .social .facebook p,.social .twitter p{
