--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ header{
     height: 4em;
     background-color: #e60012;
     z-index: 1;
+    animation: animation 30s linear infinite;
+    perspective: 1000px;
+    perspective-origin: 50% 50%;
+    background: linear-gradient(90deg,rgba(195, 34, 34, 1) 0%, rgba(195, 34, 83, 1) 5%, rgba(195, 34, 121, 1) 11%, rgba(195, 34, 189, 1) 17%, rgba(155, 34, 195, 1) 23%, rgba(96, 34, 195, 1) 28%, rgba(34, 43, 195, 1) 34%, rgba(34, 92, 195, 1) 40%, rgba(34, 151, 195, 1) 45%, rgba(34, 195, 174, 1) 51%, rgba(34, 195, 104, 1) 57%, rgba(46, 195, 34, 1) 62%, rgba(105, 195, 34, 1) 68%, rgba(165, 195, 34, 1) 73%, rgba(195, 182, 34, 1) 79%, rgba(195, 144, 34, 1) 85%, rgba(195, 109, 34, 1) 93%, rgba(195, 34, 34, 1) 100%);
 }
 svg{
     margin: 1.3em .6em;
@@ -279,6 +283,11 @@ footer .social p{
     100%{
         position: relative;
         bottom:.3em;
+    }
+}
+@keyframes animation {
+    100% {
+        background-position: -3000px 0px;
     }
 }
 /*Responsive*/
